--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+t<!doctype html>
 <html>
   <head>
     <!-- Page setup -->
@@ -69,7 +69,7 @@
     </div>
 
     <footer>  
-      2024
+      Established in 2024
     </footer>
     
     <!-- Load additional JS scripts here -->
