--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ t<!doctype html>
   <body>
 
     <header id="header">
-      <img src="logo.jpg">
+      <img src="logo.jpg" 
+     width="138" 
+     height="300" />
       <h1>Seoul Caliber</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
