--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ t<!doctype html>
               
               Please fill out your name email address phone and a detailed message and we will respond within the next business day.
 
-<form action="mailto:info@seoulcaliber.com" method="get" enctype="text/plain">
+<form action="mailto:info@seoulcaliber.com" method="post" enctype="text/plain">
 Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
