--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ t<!doctype html>
   Name:<br>
   <input type="text" name="entry.1054208006" id="entry. 1054208006"><br>
   Email:<br>
-  <input type="text" name="entry. 810989529" id="entry. 810989529">
+  <input type="text" name="entry. 810989529" id="entry. 810989529"><br>
   Phone:<br>
   <input type="text" name="entry.412170000" id="entry.412170000"><br>
-Message:<br>
-  <input type="text" ="entry.529258182" id="entry.529258182"><br>
+  Message:<br>
+  <input type="text" name="entry.529258182" id="entry.529258182"><br>
   <input type="submit" value="Submit">
 </form>
 
