--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 t<!doctype html>
 <html>
   <head>
+       <script src="assets/js/jquery.min.js"></script>
+<script type="text/javascript">var submitted=false;</script>
+<script type="text/javascript">
+$('#gform').on('submit', function(e) {
+  $('#gform *').fadeOut(2000);
+  $('#gform').prepend('Your submission has been processed...');
+  });
+</script>
+
     <!-- Page setup -->
     <meta charset="utf-8">
     <title>Seoul Caliber</title>
