--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ $('#gform').on('submit', function(e) {
   Phone:<br>
   <input type="text" name="entry.412170000" id="entry.412170000"><br>
   Message:<br>
-  <input type="text" name="entry.529258182" id="entry.529258182"><br>
+  <input type="text" name="entry.529258182" id="entry.529258182">
   <input type="submit" value="Submit">
 </form>
 
