--- a/index.html
+++ b/index.html
@@ -125,7 +125,15 @@ t<!doctype html>
     </footer>
     
     <!-- Load additional JS scripts here -->
+<script src="https://wzrd.in/standalone/formdata-polyfill"></script>
+<script src="https://wzrd.in/standalone/promise-polyfill@latest"></script>
+<script src="https://wzrd.in/standalone/whatwg-fetch@latest"></script>
 
+<script>
+  const scriptURL = '<SCRIPT URL>'
+  const form = document.forms['submit-to-google-sheet']
+  ...
+</script>
     <script type="text/javascript" src="script.js"></script>
     
   </body>
