--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 
     <header id="header">
       <img src="logo.jpg" 
-     width="138" 
-     height="300" />
-      <h1>Seoul Caliber LLC</h1>
+     width="100" 
+     height="44" /><h1>Seoul Caliber LLC</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
