--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
          <li><a href="#policies">policies</a></li>
-        <li><a href="#resources">policies</a></li>
+        <li><a href="#resources">resources</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>                 
     </header>
