--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #262626;
 }
 </style>   
   </head>
