--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
-             <p>Can I do this???</p>
-             <button type="button" class="collapsible">Can I do A??</button>
+    <p>Can I do this???</p>
+      <button type="button" class="collapsible">Can I do A??</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
@@ -140,9 +140,9 @@ for (i = 0; i < coll.length; i++) {
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-              For Inquiries Emails Us: info@seoulcaliber.com<br>
               Social Media Coming Soon...<br>
-              Hours By Appointment Only - Not Open to Public<br>
+              Please note, we are not open to the public. As a home-based business we are available by appointment only.<br>
+              For Appointments and questions, contact us: info@seoulcaliber.com<br>
             </p>
           </div>
           
