--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              We are Seoul Caliber LLC. 
+              We are Seoul Caliber LLC. Website in progress. 
             </p>
           </div>
           
@@ -146,7 +146,7 @@ for (i = 0; i < coll.length; i++) {
             <h2>Contact</h2>
             <p>
               Social Media Coming Soon...<br>
-              Please note, we are not open to the public. As a home-based business we are available by appointment only.<br>
+              Please note, we are not open to the public. <br>
               For Appointments and questions, contact us: info@seoulcaliber.com<br>
             </p>
           </div>
