--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
          <li><a href="#policies">policies</a></li>
-        <li><a href="#services">resources</a></li>
+        <li><a href="#services">services</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>                 
     </header>
@@ -75,7 +75,8 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              We are Seoul Caliber LLC. Website in progress. 
+              We are Seoul Caliber LLC in Aurora, Colorado.<br>
+              Website in progress. <br>
             </p>
           </div>
           
@@ -144,7 +145,9 @@ for (i = 0; i < coll.length; i++) {
             <p>
               Social Media Coming Soon...<br>
               Please note, we are not open to the public. <br>
-              For Appointments and questions, contact us: info@seoulcaliber.com<br>
+              For Appointments and questions, please contact us.<br>
+              Email: info@seoulcaliber.com <br>
+              Text: (720)515-4314
             </p>
           </div>
           
