--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p>
-              Coming Soon to Aurora, Colorado... <br>
               Insert Mission, Values, Vision <br>
             </p>
           </div>
@@ -145,9 +144,10 @@ for (i = 0; i < coll.length; i++) {
             <p>
               Social Media Coming Soon...<br>
               Please note, we are not open to the public. <br>
-              For Appointments and questions, please contact us.<br>
-              Email: info@seoulcaliber.com <br>
-              Text: (720)515-4314
+              Sales/Gunsmithing: sam@seoulcaliber.com or bryan@seoulcaliber.com <br>
+              Customer Support: lk@seoulcaliber.com <br>
+              Media/PR: liz@seoulcaliber.com <br>
+              For Appointments and other questions, please contact us at info@seoulcaliber.com or (720)515-4314. <br>
             </p>
           </div>
           
