--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <!-- Page setup -->
     <meta charset="utf-8">
-    <title>Seoul Caliber</title>
+     <!-- <title>Seoul Caliber</title>
     <meta name="description" content="Welcome to Seoul Caliber">
     <meta name="author" content="author name">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">  -->
   
     <!-- Stylesheets -->
     <!-- Reset default styles and add support for google fonts -->
