--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <!-- Page setup -->
     <meta charset="utf-8">
-     <!-- <title>Seoul Caliber</title>
+      <title>Seoul Caliber</title>
     <meta name="description" content="Welcome to Seoul Caliber">
     <meta name="author" content="author name">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <link rel="icon" type="image/png" href="favicon.png">  -->
+    <link rel="icon" type="image/png" href="favicon.png"> 
   
     <!-- Stylesheets -->
     <!-- Reset default styles and add support for google fonts -->
@@ -53,9 +52,8 @@
   <body>
 
     <header id="header">
-      <img src="logo.jpg" 
-     width="100" 
-     height="44" /><h1>Seoul Caliber LLC</h1>
+      <img src="logo500.jpg"  width="100" height="44" />
+      <p>SEOUL CALIBER LLC</p>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
