--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <body>
 
     <header id="header">
-      <img src="logo500.jpg"  width="100" height="44" />
+      <img src="logo500.png"  width="50" height="50" />
       <p>SEOUL CALIBER LLC</p>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
