--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ for (i = 0; i < coll.length; i++) {
     </div>
 
     <footer>  
-      Copyright © 2024 - Seoul Caliber LLC - All Rights Reserved <br>
+      © 2024 Seoul Caliber LLC. All rights reserved. <br>
       <div id="google_translate_element"></div>
     </footer>
     
