--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+2<!doctype html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
@@ -7,7 +7,17 @@
     <meta name="author" content="author name">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="icon" type="image/png" href="favicon.png"> 
-  
+ 
+    <style>
+        .container {
+            display: flex;
+            align-items: ce6666666nter; /* Aligns items vertically center */
+        }
+        .container img {
+            margin-right: 10px; /* Adds space between the image and text */
+        }
+    </style>
+    
     <!-- Stylesheets -->
     <!-- Reset default styles and add support for google fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
@@ -50,10 +60,11 @@
   </head>
   
   <body>
-
+<div class="container">
     <header id="header">
       <img src="logo500.png"  width="50" height="50" />
       <p>SEOUL CALIBER LLC</p>
+      </div>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
