--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-2<!doctype html>
+<!doctype html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-      <title>Seoul Caliber</title>
-    <meta name="description" content="Welcome to Seoul Caliber">
-    <meta name="author" content="author name">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+      <title>SEOUL CALIBER LLC</title>
+    <meta name="description" content="Welcome to Seoul Caliber LLC">
+    <meta name="author" content="b">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <link rel="icon" type="image/png" href="favicon.png"> 
  
     <style>
@@ -18,7 +18,7 @@
         }
     </style>
     
-    <!-- Stylesheets -->
+    <!-- Stylesheets , user-scalable=no -->
     <!-- Reset default styles and add support for google fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
