--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <style>
         .container {
             display: flex;
-            align-items: ce6666666nter; /* Aligns items vertically center */
+            align-items: center; 
         }
         .container img {
-            margin-right: 10px; /* Adds space between the image and text */
+            margin-right: 10px; 
         }
     </style>
     
