--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h2>About</h2>
             <p>
               TBD <br>
-		    <h1>Meet the Team</h1>
+		    <h1><u>Meet the Team</u></h1>
 		    &nbsp;
 		    Name: <b>Bryan</b> <br>
 		    Favorite Firearm: Heckler & Koch USP45T or Browning Hi-Power <br>
