--- a/index.html
+++ b/index.html
@@ -185,12 +185,19 @@ for (i = 0; i < coll.length; i++) {
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-              Social Media Coming Soon...<br>
-              Please note, we are not open to the public. <br>
-              Sales/Gunsmithing: sam@seoulcaliber.com or bryan@seoulcaliber.com <br>
+
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+              For Sales, Transfers, and Gunsmithing: sam@seoulcaliber.com or bryan@seoulcaliber.com <br>
+		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
               Customer Support: lk@seoulcaliber.com <br>
+		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
               Media/PR: liz@seoulcaliber.com <br>
+		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+	     Please note, we are currently not open to the public. <br>
+		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
               For Appointments and other questions, please contact us at info@seoulcaliber.com or (720)515-4314. <br>
+		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+		    Social Media Coming Soon...<br>
             </p>
           </div>
           
@@ -203,8 +210,8 @@ for (i = 0; i < coll.length; i++) {
 <footer>
 	<h1> Contact Us </h1>
   <p> Mon-Sat 8AM-8PM <br>
-  (720) 515-4314<br>
-      info@seoulcaliber.com
+ Text or Call: (720) 515-4314<br>
+     Email: info@seoulcaliber.com
   </p>
 </footer>
 
