--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             margin-right: 10px; 
         }
     </style>
+
+	  <style> 
+		  h3 {
+  font-size: 40px;
+}
+		  </style>
     
     <!-- Stylesheets , user-scalable=no -->
     <!-- Reset default styles and add support for google fonts -->
@@ -72,7 +78,7 @@
 <div class="container">
     <header id="header">
       <img src="logo500.png"  width="75" height="75" />
-      <p>SEOUL CALIBER LLC</p>
+      <h3>SEOUL CALIBER LLC</h3>
       </div>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
