--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ for (i = 0; i < coll.length; i++) {
 		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
               <u>Customer Support</u> lk@seoulcaliber.com <br>
 		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-              <u>Customer Support and Media</u>iz@seoulcaliber.com <br>
+              <u>Customer Support and Media</u>liz@seoulcaliber.com <br>
 		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 	     Please note, we are currently not open to the public. <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
