--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              We are Seoul Caliber LLC in Aurora, Colorado.<br>
+              We are Seoul Caliber LLC. Your #1 Sporting and Recreational Goods Retailer specializing in Firearms and all shooting related activites in Aurora, Colorad. <br>
               Website in progress. <br>
             </p>
           </div>
@@ -107,7 +107,7 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p>
-              Your #1 Sporting and Recreational Goods Retailer specializing in Firearms and all shooting related activites. Located in the most diverse city in the state of Colorado, we are the most diverse firearm retailer! We offer a comprehensive range of services including Firearm Transfers and Sales, Gunsmithing, Consultations, safety training, and notary services in English, Spanish, Korean, Vietmanese, and Mandarin. <br>
+              Located in the most diverse city in the state of Colorado, we are the most diverse firearm retailer! We offer a comprehensive range of services including Firearm Transfers and Sales, Gunsmithing, Consultations, safety training, and notary services in English, Spanish, Korean, Vietmanese, and Mandarin. <br>
 		    <h1><u>Meet the Team</u></h1>
 		    
 		    Name: <b>Bryan</b> <br>
