--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              We are Seoul Caliber LLC. Your #1 Sporting and Recreational Goods Retailer specializing in Firearms and all shooting related activites in Aurora, Colorad. <br>
+              We are Seoul Caliber LLC. Your #1 Sporting and Recreational Goods Retailer specializing in Firearms and all shooting related activites in Aurora, Colorado. <br>
               Website in progress. <br>
             </p>
           </div>
@@ -117,7 +117,7 @@
 		    Favorite Firearm: Glock 30 and Mossberg 590 <br>
 		    Interests(Non Firearm-related): Muay Thai, International Travel, Foodie <br>
 		    Contact: sam@seoulcaliber.com<br>
-		    Languages: English & Korean
+		    Languages: English & Korean <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 		    
 		    <img src="lk.jpg" alt="lk"> <br>
@@ -126,7 +126,7 @@
 		    Favorite Firearm: Heckler & Koch MP5 or MP7 <br>
 		    Interests(Non Firearm-related): Spending time with Family, Snowboarding, Watches <br>
 		    Contact: lk@seoulcaliber.com<br>
-		    Languages: English and Vietmanese
+		    Languages: English and Vietmanese <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 
 		    <img src="liz.jpeg" alt="liz"> <br>
@@ -135,14 +135,14 @@
 		    Favorite Firearm: Remington 700 .338 Lapua in Rem RACS chasis <br>
 		    Interests(Non Firearm-related): Weightlifting, Photogtaphy, Anime <br>
 		    Contact: liz@seoulcaliber.com<br>
-		    Languages: English and Mandarin
+		    Languages: English and Mandarin <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 
 		    Name: <b>Bryan</b> <br>
 		    Favorite Firearm: Heckler & Koch USP45T or Browning Hi-Power <br>
 		    Interests(Non Firearm-related): Snowboarding, Hiking, Camping <br>
 		    Contact: bryan@seoulcaliber.com<br>
-		    Languages: English & Spanish
+		    Languages: English & Spanish <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
             </p>
           </div>
@@ -228,7 +228,8 @@ for (i = 0; i < coll.length; i++) {
 
 <footer>
 	<h1> Contact Us </h1>
-  <p> Mon-Sat 8AM-8PM <br>
+  <p> 11590 E 2nd Ave, Aurora, CO 80010 <br>
+	  Mon-Sat 8AM-8PM <br>
  Text or Call: (720) 515-4314<br>
      Email: info@seoulcaliber.com
   </p>
