--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p>
-              Located in the most diverse city in the state of Colorado, we are the most diverse firearm retailer! We offer a comprehensive range of services including Firearm Transfers and Sales, Gunsmithing, Consultations, safety training, and notary services in English, Spanish, Korean, Vietmanese, and Mandarin. <br>
+              Located in the most diverse city in the state of Colorado, we are the most diverse firearm retailer! We offer a comprehensive range of services including Firearm Transfers and Sales, Gunsmithing, Consultations, Safety Training, and Notary Services in English, Spanish, Korean, Vietmanese, and Mandarin. <br>
 		    <h1><u>Meet the Team</u></h1>
 		    
 		    
