--- a/index.html
+++ b/index.html
@@ -196,7 +196,10 @@
 
 
     
-             <p><b>Gunsmithing</b> Note: We do not manufacture or fully assemble frames or lower receivers. If you require a service that is not listed or have a question, please contact us!</p>
+             <p>
+		      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+		     <b>Gunsmithing</b><br>
+		     Note: We do not manufacture or fully assemble frames or lower receivers. If you require a service that is not listed or have a question, please contact us!</p>
             <button type="button" class="collapsible">Cleaning and Maintenance</button>
             <div class="content">
             <p><ul>
@@ -225,7 +228,7 @@
   <p><ul>
 <li>Upper Assembly</li>
 	  <li>Upper Disassembly</li>
-	  <li>Barrel Installation<li>
+	  <li>Barrel Installation</li>
 	  <li>Low-profile Gas Block Pin Installation</li>
 	  <li>Gas Tube Installation</li>
 	  <li>Gas System Installation</li>
@@ -268,11 +271,16 @@ for (i = 0; i < coll.length; i++) {
             <p>
 
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-              <u>For Sales, Transfers, and Gunsmithing:</u>sam@seoulcaliber.com or bryan@seoulcaliber.com <br>
+              <u>For Sales, Transfers, and Gunsmithing: 
+	      
+	      </u> <br>
+		    sam@seoulcaliber.com or bryan@seoulcaliber.com <br>
 		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-              <u>Customer Support</u> lk@seoulcaliber.com <br>
+              <u>Customer Support</u> <br>
+		    lk@seoulcaliber.com <br>
 		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
-              <u>Customer Support and Media</u>liz@seoulcaliber.com <br>
+              <u>Customer Support and Media</u> <br>
+		    liz@seoulcaliber.com <br>
 		     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 	     Please note, we are currently not open to the public. <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
