--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
   <div class="column">
     <img src="nssf.jpg" alt="nsff" style="width:100%">
   </div>
+			      <div class="column">
+    <img src="nra.jpg" alt="nra" style="width:100%">
+  </div>
 
             </p>
           </div>
