--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@ for (i = 0; i < coll.length; i++) {
     </div>
 
 <footer>
-	<h1> Contact Us </h1>
-  <p> 11590 E 2nd Ave, Aurora, CO 80010 <br>
+	<p><b><u>Contact Us</u></b> <br>
+   11590 E 2nd Ave, Aurora, CO 80010 <br>
 	  Mon-Sat 8AM-8PM <br>
  Text or Call: (720) 515-4314<br>
      Email: info@seoulcaliber.com
