--- a/index.html
+++ b/index.html
@@ -168,7 +168,14 @@
               Policies  Coming Soon...
             </p>
           </div>
-          
+
+	 <div id="inventory" class="content-region hide">
+            <h2>Inventory</h2>
+            <p>
+              test hidden <br>
+            </p>
+          </div>
+		
            <div id="services" class="content-region hide">
             <h2>Services</h2>
               <p>Transfers</p>
