--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
 	 <div id="inventory" class="content-region hide">
             <h2>Inventory</h2>
             <p>
-              test hidden <br>
+              <ol> S&W - MP Shield 9MM + 3 mags</ol>
+		 <ol> S&W - MP Shield .40 + 4 mags - coming soon
+		 <ol> Glock 26 9MM + 3 mags - coming soon</ol>
+		 <ol> FN510t no mags - coming soon</ol>
             </p>
           </div>
 		
