--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		    Favorite Firearm: Heckler & Koch USP45T or Browning Hi-Power <br>
 		    Interests(Non Firearm-related): Snowboarding, Hiking, Camping <br>
 		    Contact: bryan@seoulcaliber.com<br>
-		    Languages: English and Spanish <br>
+		    Languages: English, Korean, Spanish <br>
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
             </p>
           </div>
