--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ for (i = 0; i < coll.length; i++) {
 <footer>
   <p>
 	<b>seoulcaliber.com</b> © 2024 All rights reserved. </p>
+	<div id="google_translate_element"></div>
 </footer>
     
     <!-- Load additional JS scripts here -->
