--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <h2>Policies</h2>
             <p>
               Policies  Coming Soon... <br>
-
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 <button type="button" class="collapsible">CUSTOMER SERVICE</button>
                   <div class="content">
                   <p>If you encounter any problems with your order or or if you have any questions about the status of your order, simply contact our customer service staff through our Contact Us page.</p>
@@ -280,6 +280,7 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
 	  
   </ul></p>
 </div>
+		   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
               <p><b>Notary</b></p>
                 <button type="button" class="collapsible">Notary Services</button>
                   <div class="content">
