--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
               <p><b>ADD</b></p>
                 <button type="button" class="collapsible">Who is allowed to own a firearm in Colorado?</button>
                   <div class="content">
-                  <p>ADD
+                  <p>ou must be at least 18 years old and must not have any state or federal prohibitions in order to own a firearm in Colorado. <br>
+			  Colorado State Code §§ 18-12-203, 18-12-108 states that people under the following conditions may not carry a gun:<br>
+			  <ul> Under the age requirement (handgun: 21 / long gun: 18 </ul>
+			  <ul>Anyone with a felony conviction</ul>
+			  <ul>Alcoholics or individuals addicted to controlled substances</ul>
+			  <ul>Individuals subject to protection orders related to domestic violence, stalking, harassment, or other forms of abuse</ul>
 		  </p>
                   </div>
 		<button type="button" class="collapsible">Can I open carry in Colorado?</button>
@@ -261,7 +266,7 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
                   </div>
 			<button type="button" class="collapsible">How old do I need to be to purchase a firearm?</button>
                   <div class="content">
-                  <p>ADD
+                  <p> Current Colorado State law requires that you must be 18 years or older to purchase a shotgun or long gun (e.g. rifles) For handgun purchagses, you must be atleast 21 years of age.
 		  </p>
                   </div>
 			<button type="button" class="collapsible">Can I purchase a firearm for someone that was denied their firearm purchase?</button>
