--- a/index.html
+++ b/index.html
@@ -218,14 +218,16 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
 
 	<div id="faq" class="content-region hide">
             <h2>FAQ</h2>
-              <p><b>ADD</b></p>
+              <p>Please note, this is a general FAQ guide provided by Seoul Caliber LLC. State and Federal legislation, rules and statutes are consistently changing and it is the individuals responsibility to abide by current statutes in order to be in compliance. Seoul Caliber LLC is not responsible or liable.</p>
                 <button type="button" class="collapsible">Who is allowed to own a firearm in Colorado?</button>
                   <div class="content">
-                  <p>ou must be at least 18 years old and must not have any state or federal prohibitions in order to own a firearm in Colorado. <br>
+                  <p>You must be at least 18 years old and must not have any state or federal prohibitions in order to own a firearm in Colorado. <br>
 			  Colorado State Code §§ 18-12-203, 18-12-108 states that people under the following conditions may not carry a gun:<br>
 			  <ul> Under the age requirement (handgun: 21 / long gun: 18 </ul>
 			  <ul>Anyone with a felony conviction</ul>
-			  <ul>Alcoholics or individuals addicted to controlled substances</ul>
+			  <ul>Fugitives from justice</ul>
+			  <ul>Anyone who is an unlawful user of, or addicted to, marijuana or any depressent, stimaulant, narcotic, or any controlled substance. Note: The use or possession of marijuana remains unlawful under Federal law. </ul>
+			  <ul>Anyone adjudicated as mental defective OR ever been committed to a mental institution
 			  <ul>Individuals subject to protection orders related to domestic violence, stalking, harassment, or other forms of abuse</ul>
 		  </p>
                   </div>
@@ -234,6 +236,20 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
                   <p>The actual open carrying of firearms is regulated by local county and municipal authorities. Confirmation of open carry municipal code restrictions would have to be done with those local authorities. Generally, most city municipal codes are posted on-line for review by the public.
 		  </p>
                   </div>
+		<button type="button" class="collapsible">Can I open carry in Aurora?</button>
+                  <div class="content">
+                  <p> <b>Yes</b>, but please note the following per Sec. 94-154: <br>
+			  <ul> The carrying of firearms in or upon public facilities is unlawful when said facilities are posted with notification that the carrying of firearms is prohibited.</ul>
+		 <ul>Public facilities shall include, but not be limited to, municipally owned, operated or leased buildings, properties, recreational facilities, parks, trails, and open spaces.</ul>
+		 <ul>The city hereby opts out, as provided for in C.R.S. 18-12-105.3(4)(b), of the general state law prohibition for carrying of firearms on certain government properties. This includes:</ul>
+			  <ol>Properties or buildings where the chambers or galleries of a local government's governing body are located;</ol>
+			  <ol>Locations where a meeting of the local government's governing body is being conducted;</ol>
+			  <ol>Official offices of any elected member of a local government's governing body or of the chief executive officer of a local government, as stated in C.R.S. 18-12-105.3(1)(b).</ol>
+		  
+		  
+		  </p>
+                  </div>
+		
 		<button type="button" class="collapsible">How do I obtain a Concealed Handgun Permit?</button>
                   <div class="content">
                   <p>A permit to carry a concealed weapon may be obtained through the Sheriff of the county in which you live. You must meet certain requirements to qualify for the permit. [C.R.S. 18-12-203] Consult your local Sheriff's Department for more information obtaining a permit. 
@@ -241,17 +257,17 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
                   </div>
 		<button type="button" class="collapsible">Am I required to register my weapon in the State of Colorado?</button>
                   <div class="content">
-                  <p>The State of Colorado prohibits gun registration. CRS 29-11.7-102
+                  <p> <b>No</b> The State of Colorado prohibits gun registration. CRS 29-11.7-102
 		  </p>
                   </div>
 		<button type="button" class="collapsible">What is the magazine capacity limit in Colorado?</button>
                   <div class="content">
-                  <p>ADD
+                  <p>CRS 18-12-302 states firearm magazines may hold a maximum of fifteen (15) rounds.
 		  </p>
                   </div>
 		<button type="button" class="collapsible">How do I sell my firearm in Colorado?</button>
                   <div class="content">
-                  <p>ADD
+                  <p>Per C.R.S. 18-12-112.5, All firearm transfers must be completed by licensed dealers with a background check required.
 		  </p>
                   </div>
 		<button type="button" class="collapsible">Can I have a firearm in my vehicle in Colorado without a Concealed Handgun Permit?</button>
@@ -271,7 +287,7 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
                   </div>
 			<button type="button" class="collapsible">Can I purchase a firearm for someone that was denied their firearm purchase?</button>
                   <div class="content">
-                  <p>ADD
+                  <p><b>No</b>
 		  </p>
                   </div>
 			<button type="button" class="collapsible">ADD</button>
