--- a/index.html
+++ b/index.html
@@ -290,12 +290,28 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
                   <p><b>No</b>
 		  </p>
                   </div>
-			<button type="button" class="collapsible">ADD</button>
+		<button type="button" class="collapsible">What is an SBR?</button>
+                  <div class="content">
+                  <p>An SBR is a short-barreled rifle, which is a legal term in the United States for a shoulder-fired firearm with a barrel length of less than 16 inches. It can also refer to a handgun with a barrel length of less than 16 inches and a buttstock. 
+SBRs are subject to the National Firearms Act (NFA) and require a special tax stamp and ATF approval to own.
+		  </p>
+                  </div>
+		 </div>
+		<button type="button" class="collapsible">ADD</button>
                   <div class="content">
                   <p>ADD
 		  </p>
                   </div>
 		 </div>
+		<button type="button" class="collapsible">ADD</button>
+                  <div class="content">
+                  <p>ADD
+		  </p>
+                  </div>
+		 </div>
+
+
+		
            <div id="services" class="content-region hide">
             <h2>Services</h2>
               <p><b>Transfers</b></p>
