--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <body>
 <div class="container">
     <header id="header">
-      <img src="logo500.png"  width="75" height="75" />
+      <img src="header.png"  width="75" height="75" />
       <h3>SEOUL CALIBER LLC</h3>
       </div>
       
@@ -277,7 +277,6 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
 		  </p>
                   </div>
 
-                  </div>
 			
 			<button type="button" class="collapsible">How old do I need to be to purchase a firearm?</button>
                   <div class="content">
@@ -297,6 +296,7 @@ All new firearms are shipped in the original manufacturer’s box, with magazine
 SBRs are subject to the National Firearms Act (NFA) and require a special tax stamp and ATF approval to own.
 		  </p>
                   </div>
+				  </div>
 		 </div>
 		
 		 </div>
