--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <body>
 <div class="container">
     <header id="header">
-      <img src="header.png"  alt="Logo" class="logo">
+      <img src="headersmaller.png"  alt="Logo" class="logo">
       </div>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
