--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ for (i = 0; i < coll.length; i++) {
 		    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
 		    <b>Check us out and give us a follow and like on Social Media:</b><br>
 		    <a href="https://www.facebook.com/profile.php?id=61566764888949">Facebook: Seoul Caliber LLC</a><br>
-			<a href="https://www.instagram.com/seoulcaliberllc">Instagram: Seoul Caliber LLC</a>
+			<a href="https://www.instagram.com/seoulcaliberllc">Instagram: Seoul Caliber LLC</a> <br>
 
 
 
