--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ for (i = 0; i < coll.length; i++) {
 
 	<div id="faq" class="content-region hide">
             <h2>FAQ</h2>
-              <p>Please note, this is a general FAQ guide provided by Seoul Caliber LLC. State and Federal legislation, rules and statutes are consistently changing and it is the individuals responsibility to abide by current statutes in order to be in compliance. Seoul Caliber LLC will not be responsible or liable for misinformation.</p>
+              <p>Please note, this is a general FAQ guide provided by Seoul Caliber LLC. State and Federal legislation, rules and statutes are consistently changing and it is the individuals responsibility to abide by current statutes in order to be in compliance. Seoul Caliber LLC will not be responsible or liable for misinformation.
                 
 				<button type="button" class="collapsible">Who is allowed to own a firearm in Colorado?</button>
                   <div class="content">
@@ -497,7 +497,9 @@ for (i = 0; i < coll.length; i++) {
 SBRs are subject to the National Firearms Act (NFA) and require a special tax stamp and ATF approval to own.
 		  </p>
                   </div>
-				  </div>
+		</p>
+		 </div>
+		
 		 </div>		
 		 </div>
 		 </div> 
