--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <li><a href="#about">about</a></li>
         <li><a href="#services">services</a></li>
          <li><a href="#policies">policies</a></li>
-	
+	      <li><a href="#faq"></a><faq/li>	
         <li><a href="#contact">contact</a></li>
-	      <li><a href="#faq"></a></li>
+
       </ul>                 
     </header>
 
