--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <li><a href="#about">about</a></li>
         <li><a href="#services">services</a></li>
          <li><a href="#policies">policies</a></li>
-	      <li><a href="#faq"></a><faq/li>	
+	<li><a href="#faq">faq</a></li>	
         <li><a href="#contact">contact</a></li>
 
       </ul>                 
